# backend/controllers/routes.ts
@@ -105,6 +105,7 @@ const models: TsoaRoute.Models = {
             "id": {"dataType":"string","required":true},
             "name": {"dataType":"string","required":true},
             "image": {"dataType":"string","required":true},
+            "alias": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
     },
@@ -122,16 +123,6 @@ const models: TsoaRoute.Models = {
         "properties": {
             "data": {"dataType":"union","subSchemas":[{"ref":"CategoryItems"},{"dataType":"enum","enums":[null]}],"required":true},
             "error": {"dataType":"union","subSchemas":[{"ref":"Error"},{"dataType":"enum","enums":[null]}],"required":true},
-        },
-        "additionalProperties": false,
-    },
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "ICategoryListRequest": {
-        "dataType": "refObject",
-        "properties": {
-            "parentIds": {"dataType":"array","array":{"dataType":"string"},"required":true},
-            "name": {"dataType":"string","required":true},
-            "ids": {"dataType":"array","array":{"dataType":"string"},"required":true},
         },
         "additionalProperties": false,
     },
@@ -258,11 +249,10 @@ export function RegisterRoutes(app: express.Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        app.post('/api/v1/category/list',
+        app.get('/api/v1/category/list',
 
             function CategoryController_list(request: any, response: any, next: any) {
             const args = {
-                    body: {"in":"body","name":"body","required":true,"ref":"ICategoryListRequest"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
