# backend/public/swagger.json
@@ -262,32 +262,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"ICategoryListRequest": {
-				"properties": {
-					"parentIds": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
-					},
-					"name": {
-						"type": "string"
-					},
-					"ids": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"parentIds",
-					"name",
-					"ids"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"ProductItem": {
 				"properties": {
 					"id": {
@@ -497,7 +471,7 @@
 			}
 		},
 		"/api/v1/category/list": {
-			"post": {
+			"get": {
 				"operationId": "List",
 				"responses": {
 					"200": {
@@ -512,17 +486,7 @@
 					}
 				},
 				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/ICategoryListRequest"
-							}
-						}
-					}
-				}
+				"parameters": []
 			}
 		},
 		"/v1/product/query": {
